@startuml
title Entity-Relationship Diagram (DEMO) — ORT Platform

entity "User" as U {
  *id : UUID
  --
  email : string
  password : string
  role : enum(User, Moderator, Admin)
}

entity "Article" as A {
  *id : UUID
  --
  title : string
  content : text
  status : enum(DRAFT, APPROVED, REJECTED)
  createdAt : datetime
}

entity "Question" as Q {
  *id : UUID
  --
  text : string
  type : enum(SINGLE, MULTIPLE)
  correctAnswer : string
}

entity "TestSession" as T {
  *id : UUID
  --
  score : float
  startedAt : datetime
  finishedAt : datetime
}

entity "Notification" as N {
  *id : UUID
  --
  message : string
  type : string
  recipientId : UUID
}

U ||--o{ A : "creates"
U ||--o{ T : "starts"
A ||--o{ Q : "contains"
U ||--o{ N : "receives"
A }o--|| U : "authored by"
A }o--|| U : "approved by (Moderator)"
T }o--o{ Q : "includes"

@enduml
